# fortran-examples

./: .fprettify.rc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake_build.sh  docker-compose.yml  fpm.toml  plot_height_multipanel.py  plot_points.py  rebuild.sh  requirements.txt
app/: hello_world.f90
cmake/: python_dependencies.cmake
ctest/: define-tests  my_tests.f90
ctest/cmake/: define-tests  find-fassert
src/: CMakeLists.txt  error_handling.f90  hello_world.f90  integration.f90  logging.f90  performance.f90  solve_some_ode.f90  tsunami.f90  world.f90
src/common/: CMakeLists.txt  list_template.inc  m_to_string.f90  map_template.inc  precision.f90
src/error_handling/: CMakeLists.txt  m_error.f90  m_files.f90
src/examples/: CMakeLists.txt  example_2d_vector_generic_type_bound_procedure.f90  example_adding_vectors.f90  example_adding_vectors_type_bound_alternative.f90  example_custom_concat.f90  example_distance_function.f90  example_integrate_trapezoid_with_function_argument_interface.f90  example_integrate_trapezoid_with_procedure_pointer.f90  example_logging.f90  example_logging_file_and_print_logger.f90  example_logging_file_logger_final_procedure_bad_example.f90  example_logging_final_procedure.f90  example_logging_interface.f90  example_logging_logger_factory.f90  example_logging_logger_factory_with_pointer.f90  example_logging_logger_factory_with_pointer_and_multi_logger.f90  example_logging_multilogger.f90  example_multi_logger_tryout.f90  example_point_no_type.f90  example_point_type.f90  example_timer_and_timer_list_copies.f90  example_timer_and_timer_list_get_allocated.f90  example_timer_and_timer_list_improved.f90  example_vector_constructor_getters_setters.f90  example_vector_factory.f90  example_wrapping_instances.f90
src/examples/fp/: example_curried_map.f90  example_curry.f90  example_error_handling_options.f90  example_filter_and_map.f90  example_generalizing_a_traditional_sum.f90  example_generic_list_filter_and_map.f90  example_generic_list_reduce.f90  example_generic_list_with_pointers.f90  example_guarantees.f90  example_loop_without_index.f90  example_map_filter_reduce_with_loops.f90  example_optional_result.f90  example_parse_polyline.f90  example_pure_functions.f90  example_recursive_reduction.f90  example_reduce.f90  example_statistics.f90  example_statistics_cleanup.f90  example_stream.f90  example_string_list.f90
src/examples/oop/: example_adding_vectors.f90  example_allocatable_array_copy.f90  example_defining_possibilities.f90  example_distance_type_bound_procedure.f90  example_dt_pointers.f90  example_integrate_trapezoid_procedure_pointer_performance.f90  example_integrate_trapezoid_with_derived_type.f90  example_logging_file_logger_final_procedure_good_example.f90  example_logging_logger_factory.f90  example_multi_logger_tryout.f90  example_plot_function_to_be_integrated.f90  example_timer_and_timer_linked_list.f90  example_timer_and_timer_list_copies.f90  example_timer_and_timer_list_improved.f90  example_vector_constructor.f90  example_vector_constructor_getters_setters.f90  example_vector_no_constructor.f90  example_vector_private_components.f90  example_wrapping_instances.f90
src/hello_world/: CMakeLists.txt  hello.f90  m_hello_world.f90  world.f90
src/integration/: CMakeLists.txt  functions.f90  integration_library.f90
src/logging/: CMakeLists.txt  m_logging.f90
src/ode/: CMakeLists.txt  ode_solvers.f90  some_ode.f90
src/pump/: hydraulic_structure_pump.f90
src/stopwatch/: CMakeLists.txt  m_ended_timer_list.f90  m_started_timer_map.f90  m_stopwatch.f90  m_stopwatch_facade.f90
src/tsunami/: CMakeLists.txt  m_config.f90  m_diff.f90  m_field.f90  m_init.f90  m_observer.f90
test/: CMakeLists.txt  main.f90  my_tests.f90  test_hello_world_module.f90  test_pump.f90  test_suite1.f90  test_tsunami.f90
test/cmake/: find-test-drive
